make list of pia table view detail link align correct

--- a/src/frontend/src/sass/_buttons.scss
+++ b/src/frontend/src/sass/_buttons.scss
@@ -132,6 +132,7 @@ a:hover {
 .bcgovbtn__tertiary {
   --text-color: #{$primary-colour};
 
+  padding-top: 1.2em;
   border: none;
   background-color: transparent;
   font-weight: 700;
